[package]
name = "pixivdwn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
diesel = { version = "2.3.1", features = ["returning_clauses_for_sqlite_3_35", "sqlite"] }
dotenvy = "0.15.7"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_repr = "0.1.20"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
