[package]
name = "pixivdwn"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
image = "0.25.8"
indicatif = "0.18.0"
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite-unbundled", "macros", "derive", "runtime-tokio", "chrono", "migrate"] }
tempfile = "3.22.0"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
zip = "5.1.1"
