[package]
name = "pixivdwn"
version = "0.1.0-alpha1"
edition = "2024"
description = "Incremental pixiv crawler/downloader"
license = "MIT"
documentation = "https://circuitcoder.github.io/pixivdwn"
homepage = "https://github.com/CircuitCoder/pixivdwn"
repository = "https://github.com/CircuitCoder/pixivdwn"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
image = "0.25.8"
indicatif = "0.18.0"
rand = "0.9.2"
scraper = "0.24.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
serde_repr = "0.1.20"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite-unbundled", "macros", "derive", "runtime-tokio", "chrono", "migrate"] }
tempfile = "3.22.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
wreq = { version = "6.0.0-rc.20", features = ["json", "stream"] }
wreq-util = "3.0.0-rc.3"
zip = "5.1.1"
